--- a/html-patterns_structure.html
+++ b/html-patterns_structure.html
@@ -17,6 +17,10 @@
       	- Font weights and sizes
         - Implement primary and secondary colors (this can be applied to all the layout not just the font)
 
+     4. Create a button that hides the grid on click, and sets a message below title saying the following: 
+        "CLick on the button again to show grid" 
+        - Change button element states
+
  -->
 
 
