--- a/html_material_component.html
+++ b/html_material_component.html
@@ -10,7 +10,7 @@
 
      1. Create a stepper to guide user through a sequence of steps, use any real reference to complete this.
      2. Must contain at least 4 diferent steps, a back button on each of the steps except for the first one.
-     3. The info must be consistent and really explain the user what he is doing on every step
+     3. The info must be consistent and really explain the user what he is doing on every step.
      NOTE: Use material design guidelines for this stepper, I will be looking for symmetry and exact measurements (but
      you could use your criteria on how many pixels you are using on every component).
 
