--- a/REST_API.html
+++ b/REST_API.html
@@ -14,7 +14,7 @@
      3. At least 3 of the inputs must have info generated from a REST-api with $.ajax in a javascript promise.
      IMPORTANT: need to implement then and catch callbacks and change something in the DOM.
         https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise
-
+        please (optional) search for another better fake api https://reqres.in/
      4. (Optional) user may add info to those inputs and data would be saved (POST).
      5. Add a link to a html page where users can learn about ajax and promises (make it easy for the user)
 
