--- a/REST_API.html
+++ b/REST_API.html
@@ -28,7 +28,7 @@
 <!--
  *
  * JavaScript Promises act as a asynchronous operation, this can be helpful when something has to be done
- * after the promise has finish the operation, Javascript promises has methods
+ * after the promise has finish the operation.
  *
  * AJAX:
  * https://developer.mozilla.org/es/docs/Web/Guide/AJAX
