--- a/patterns.html
+++ b/patterns.html
@@ -8,6 +8,7 @@
 
 <link rel="stylesheet" href="css/styles_2.css">
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <body>
 
@@ -29,29 +30,29 @@
 
  -->
   <div class="main">
-    <h1 class="title">GRID</h1>
-    <h2 id="message"></h2>
+    <h1 class="title text--bold">GRID</h1>
+    <h2 class="text--light" id="message"></h2>
     <div class="wrapper" id="grid">
       <div class="box a color--primary">
-        <img class="box__image" src="img/img_1.png" alt="">
+        <i class="material-icons box__icon">mode_edit</i><br>
         <span class="box__text"> EDIT </span>
       </div>
       <div class="box b color--darkblue">
-        <img class="box__image" src="img/img_2.png" alt="">
+        <i class="material-icons box__icon">message</i><br>
         <span class="box__text"> MESSAGE </span>
       </div>
       <div class="box c color--primary">
-        <img class="box__image" src="img/img_3.png" alt="">
+        <i class="material-icons box__icon">search</i><br>
         <span class="box__text"> SEARCH </span>
       </div>
 
       <div class="box d color--darkred">
-        <img class="box__image" src="img/img_4.png" alt="">
+        <i class="material-icons box__icon">settings</i><br>
         <span class="box__text"> SETTINGS </span>
       </div>
 
       <div class="box e color--primary">
-        <img class="box__image" src="img/img_5.png" alt="">
+        <i class="material-icons box__icon">play_arrow</i><br>
         <span class="box__text"> GO </span>
       </div>
     </div>
