--- a/REST_API.html
+++ b/REST_API.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>CSS Patterns: Media Object</title>
+  <meta charset="UTF-8">
+  <title>Rest API</title>
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/rest_api.css">
+  <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+
 <body>
 
-<!-- Instructions:
-
+  <!-- Instructions:
      1. Create a form which will contain multiple inputs, those inputs will be disabled until the user has selected
      the first input. (those have to be any non simple text input, may be dropdowns, checkboxes, multipleselects, etc...)
      2. The label info must focus the input when user clicks on it.
@@ -18,11 +24,116 @@
      4. (Optional) user may add info to those inputs and data would be saved (POST).
      5. Add a link to a html page where users can learn about ajax and promises (make it easy for the user)
 
+     + + +
+     first
+     second
+     third
+
+- Hasta que completes el primer input se habilitan los demas inputs. Debe de ser algo que no sea un simple text input.
+
+- https://swapi.co/
+
+que te traega uno luego otro luego otro, para que el usuario no se desespere.
+
+clase disables para los inputs hasta que uno cargue
+
+https://www.codebyamir.com/blog/populate-a-select-dropdown-list-with-json
+
+cada llamada a ajax promesas
+
+usar jquery
+
+cada llamada a ajax debe estar dentro de un promise
+
+new Promise / return Promise
+
+https://www.stephanboyer.com/post/107/fun-with-promises-in-javascript CHECAR ESTO
+
+https://www.youtube.com/watch?v=bcjq3koKpFE
+
+A promise supports two methods: then and catch. then takes a continuation, which is just a callback that takes the result as an argument and returns a new promise or any other value. Similarly, catch is the callback that is invoked when the action raises an exception or fails in some other way.
+
+var promise1 = new Promise(function(resolve, reject) {
+  setTimeout(resolve, 100, 'foo');
+
+  $.ajax(){
+  }sucess: resolve,
+    error: reject
+});
+
+console.log(promise1);
+// expected output: [object Promise]
+
+var promise = new Promise(function(resolve, reject) {
+  // do a thing, possibly async, then…
+
+  if (/* everything turned out fine */) {
+    resolve("Stuff worked!");
+  }
+  else {
+    reject(Error("It broke"));
+  }
+});
+
+The jqXHR objects returned by $.ajax() as of jQuery 1.5 implement the Promise interface, giving them all the properties, methods, and behavior of a Promise (see Deferred object for more information). These methods take one or more function arguments that are called when the $.ajax() request terminates. This allows you to assign multiple callbacks on a single request, and even to assign callbacks after the request may have completed. (If the request is already complete, the callback is fired immediately.) Available Promise methods of the jqXHR object include:
+
+
+Si admite POST usarlo swapi
  -->
+
+
 
   <!-- Write your code here -->
 
+  <div class="wrapper">
+    <div class="box">
+      <div class="form-container">
+        <form id="regForm">
+          <div class="tab">
+            <div class="info">
+              <img src="https://vignette.wikia.nocookie.net/disney/images/2/21/Star_Wars_logo.png/revision/latest?cb=20170909202326"><br>
+              <span class="title"> CHARACTER ENCICLOPEDIA  </span>
+            </div>
+            <!-- Selects are populated via JavaScript-->
+            <select id="star_wars-films" class="form-input"></select>
+            <select id="star_wars-characters" class="form-input" disabled> </select>
+            <!-- Homeworld , species,  birth year, gender, height , mass-->
+            <div class="character-info">
+              <div class="info-row">
+                <span class="label ">Homeworld:</span>
+                <input type="text" id="homeworld" name="homeworld" value="" class="form-input display" disabled>
+              </div>
+              <div class="info-row">
+                <span class="label ">Birth Year:</span>
+                <input type="text" id="birth_year" name="birth_year" value="" class="form-input display" disabled>
+              </div>
+              <div class="info-row">
+                <span class="label ">Gender:</span>
+                <input type="text" id="gender" name="gender" value="" class="form-input display" disabled><br>
+              </div>
+              <div class="info-row">
+                <span class="label ">Hair Color:</span>
+                <input type="text" id="hair_color" name="species" value="" class="form-input display" disabled>
+              </div>
+              <div class="info-row">
+                <span class="label ">Height:</span>
+                <input type="text" id="height" name="height" value="" class="form-input display" disabled><br>
+              </div>
+              <div class="info-row">
+                <span class="label ">Mass:</span>
+                <input type="text" id="mass" name="mass" value="" class="form-input display" disabled><br>
+              </div>
+            </div>
+        </form>
+        <div class="button-section">
+          <button type="button" class="btn--primary" id="showBtn" name="button" disabled>SHOW INFO</button>
+        </div>
+        </div>
+      </div>
+    </div>
+    <script src="scripts/rest_api.js"></script>
 </body>
+
 </html>
 
 <!--
